trunk/Archive2/ea/aa39aec90f56b5/output
main.cpp:5:19: error: expected ';' in 'for' statement specifier
    for (int i = 5: {1, 2, 3})
                  ^
main.cpp:5:19: error: expected expression
2 errors generated.
